# tree-sitter-mim

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mim.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mim/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMim/: mim.h
bindings/swift/TreeSitterMimTests/: TreeSitterMimTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: axiom.txt  dependency.txt  expression.txt  fun.txt  lam.txt  let.txt  new.txt  type.txt
test/examples/: traling_space.mim
test/plugins/: core.mim
